# liblsl-Android

./: README.md
AndroidStudio/: CMakeLists.txt  README.md  build.gradle  gradle.properties  readme.txt  settings.gradle
AndroidStudio/ReceiveStringMarkers/: build.gradle
AndroidStudio/ReceiveStringMarkers/src/main/java/edu/ucsd/sccn/receivestringmarkers/: MainActivity.java
AndroidStudio/SendStringMarkers/: build.gradle
AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
